Spacing solved for top two-thirds of page

--- a/css/style.css
+++ b/css/style.css
@@ -26,22 +26,20 @@ nav {
 main {
     display:flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     justify-content: center;
     align-items: center;
-    width: 960px;
     margin: 30px auto;
 }
 
-#HeroImage {
+.HeroImage {
     display: flex;
     margin: 0 auto;
-    /* width: 80%; */
-    gap: 20px;
-    border:rgb(148, 4, 4);
+    width: 80%;
+    gap: 30px;
 }
 
-#HeroImage img {
+.HeroImage img {
     width: 100%;
 }
 
@@ -49,11 +47,9 @@ main {
     display: flex;
     margin: 0 auto;
     width: 80%;
-    gap: 20px;
-    /* justify-content: space between;
+    gap: 30px;
+    justify-content: space between;
     align-items: center;
-    width: 100%;
-    margin: 30px 0; */
 }
 
 .SubBanner img {
